# NewsParser

./: .dockerignore  .env_template  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.web  README.md  app.py  docker-compose.yml  main.py  mongo-init.js  mongod.conf  pyproject.toml  redis.conf  requirements-web.txt  requirements.txt  test.py  tox.ini  web.py
docker/: docker-compose.yml
notebooks/: summarizer.ipynb
src/parsers/: bcs_parser.py  rss_parser.py  telegram_parser.py
src/utils/: mongo_utils.py  telegram_utils.py  tg_bot_subscribers  user_agents  user_agents_0623  utils.py
templates/: index.html
