[tool.poetry]
name = "newsparser"
version = "0.1.0"
description = "Project for parsing news from different sources and save them in database and notify in telegram"
authors = ["alexander <as.frantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
pymongo = "^4.4.1"
loguru = "^0.7.0"
beautifulsoup4 = "^4.12.2"
python-dotenv-vault = "^0.6.3"
scrapy = "^2.10.0"
python-telegram-bot = {extras = ["job-queue"], version = "^20.4"}
aiohttp = "^3.8.5"
httpx = "^0.24.1"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
uvloop = "^0.17.0"
sumy = "^0.11.0"
nltk = "^3.8.1"
langdetect = "^1.0.9"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
gensim = "^4.3.2"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
ipykernel = "^6.25.1"
sumy = "^0.11.0"
nltk = "^3.8.1"
transformers = "^4.32.1"
tqdm = "^4.66.1"
torch = "2.0.0"
sentencepiece = "^0.1.99"
pyrogram = "^2.0.106"
pyproject-flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
# Check that this is aligned with your other tools like Black
max-complexity = 10
max-line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [ 
    "E203",
    "W503",
    "E701"
]